demo/go_vault_demo/api_gw/gw.yaml

---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
 name: example-http-route
spec:
 parentRefs:
 - name: api-gateway
   namespace: default
 rules:
 - backendRefs:
   - name: vault-go-demo
     port: 9090
# ---
# apiVersion: gateway.networking.k8s.io/v1beta1
# kind: HTTPRoute
# metadata:
#   name: route-root
#   namespace: default
# spec:
#   parentRefs:
#   - name: api-gateway
#     namespace: default
#   rules:
#   - matches:
#     - path:
#         type: PathPrefix
#         value: /
#     backendRefs:
#     - kind: Service
#       name: vault-go-demo
#       port: 9090
# ---
# apiVersion: gateway.networking.k8s.io/v1beta1
# kind: HTTPRoute
# metadata:
#   name: route-vault-go-demo
#   namespace: default
# spec:
#   parentRefs:
#   - name: api-gateway
#     namespace: default
#   rules:
#   - matches:
#     - path:
#         type: Exact
#         value: /go
#     backendRefs:
#     - kind: Service
#       name: vault-go-demo
#       namespace: default
#       port: 9090
#     filters:
#       - type: URLRewrite
#         urlRewrite:
#           path:
#             replacePrefixMatch: /
#             type: ReplacePrefixMatch
